monitoring/controllers/homelab/kube-prometheus-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.vandesteeg.dev
      http:
        paths:
          - backend:
              service:
                name:  kube-prometheus-stack-grafana
                port:
                  number: 3000
            path: /
            pathType: Prefix
